@@ -71,16 +71,16 @@ public class BlockExchangeTest {
     BlockExchange exchange = new TestBlockExchange(destinations);
 
     // When:
-    exchange.send(SuccessMseBlock.INSTANCE, Collections.emptyList());
+    exchange.send(SuccessMseBlock.INSTANCE, List.of());
 
     // Then:
     ArgumentCaptor<MseBlock.Eos> captor = ArgumentCaptor.forClass(MseBlock.Eos.class);
 
-    Mockito.verify(_mailbox1).send(SuccessMseBlock.INSTANCE, Collections.emptyList());
+    Mockito.verify(_mailbox1).send(SuccessMseBlock.INSTANCE, List.of());
     Mockito.verify(_mailbox1, Mockito.times(1)).send(captor.capture(), anyList());
     Assert.assertTrue(captor.getValue().isEos());
 
-    Mockito.verify(_mailbox2).send(SuccessMseBlock.INSTANCE, Collections.emptyList());
+    Mockito.verify(_mailbox2).send(SuccessMseBlock.INSTANCE, List.of());
     Mockito.verify(_mailbox2, Mockito.times(1)).send(captor.capture(), anyList());
     Assert.assertTrue(captor.getValue().isEos());
   }
